# torch-to-nnef

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prospector.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dl_ci_tract.sh  makefile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  doc.yml  release.yml
dbg/: graph.nnef
docs/: autodoc_ops.py  backstory.md  export_api.md  index.md  nnef_lexer.py  style.css  why_nnef.md
docs/contributing/: add_new_aten_op.md  debugging.md  generate_support_page.py  get_torch_ir_names.py  internal_design.md  supported_operators.md  torch_doc_urls.json
docs/examples/: getting_started.py
docs/examples/dynamic_axes/: cnn_deepspeech_stream.py  export_albert_fixed.py  export_with_batchable.py
docs/examples/getting_started_py/: export.py  requirements.txt  run.py
docs/examples/getting_started_rs/: Cargo.toml
docs/examples/imageclass-wasm/: Cargo.toml  export_with_batchable.py  requirements.txt  run.sh
docs/examples/llm_wasm/: .gitignore  Cargo.toml  run.sh
docs/examples/llm_wasm/src/: lib.rs
docs/examples/multi_io_py/: export_albert.py
docs/examples/quantization_py/: export_toy_cnn_8bit.py  super_quant.py
docs/examples/vad/: .gitignore  Cargo.toml  export.py  requirements.txt  run.sh
docs/examples/vad/src/: lib.rs
docs/examples/yolo/: .gitignore  Cargo.toml  export.py  requirements.txt  run.sh
docs/examples/yolo/src/: lib.rs
docs/html/: 1klabels.html  demo_image_classifier.html  demo_poem_generator.html  demo_pose_estimation.html  demo_vad.html  iframe_demo_parent.js  llm_worker.js  vad_wasm.js  yolo.js  yolo_worker.js
docs/js/: imageclass_wasm.js  vad_wasm.js
docs/overrides/partials/: footer.html
docs/tutos/: 1_getting_started.md  2_nnef_archive.md  2_streaming_dimension.md  3_llm.md  3_multi_inputs_outputs.md  4_dynamic_axes.md  4_quantization.md  4_streaming_dimension.md  5_llm.md  5_offloaded_tensor.md  6_custom_operator.md  6_quantization.md  7_offloaded_tensor.md  7_peft.md  8_custom_operator.md  9_peft.md
scripts/: export_llama.py  export_llama2.py  export_openelm.py  export_phi.py  generate_qtensor_gguf_matmul.py
tests/: __init__.py  conftest.py  monitor_self_assign_mul_torch_bug.py  shifted_window_attention_patch.py  test_bitpack.py  test_dynamic_axes.py  test_export.py  test_f16.py  test_fft.py  test_fix18.py  test_fix_assign_same_param_twice.py  test_fix_lnorm_perm.py  test_fix_regression_tract_mul.py  test_fix_se.py  test_fix_slice_assign.py  test_forward_call.py  test_linear_acc.py  test_llama.py  test_llama2.py  test_llm_cli.py  test_mix_dtypes.py  test_mod.py  test_model_zoo.py  test_multi_head_att.py  test_named_items.py  test_nnef_compliance_mode.py  test_offload.py  test_peft.py  test_phi.py  test_pickle.py  test_primitive.py  test_qtensor.py  test_quantized.py  test_rnn_advanced.py  test_simple_model.py  test_tile_and_dyn_dim.py  test_torch_graph.py  test_tract_core_external.py  test_tricky.py  test_updater.py  (+3 more)
tests/mod/: nemo_featurizer.py
torch_to_nnef/: __init__.py  bitpack.py  collect_env.py  compress.py  console.py  custom_nnef_writer.py  dtypes.py  exceptions.py  export.py  inference_target.py  log.py  model_wrapper.py  nnef_graph.py  ntensor.py  qtensor.py  tensor.py  torch_graph.py  torch_named_tensor.py  tract.py  utils.py
torch_to_nnef/inference_target/: __init__.py  base.py  khronos.py  tract.py
torch_to_nnef/llm_tract/: cli.py  compress.py  config.py  exporter.py
torch_to_nnef/llm_tract/models/: base.py
torch_to_nnef/nnef_io/: tensor.py  writer.py
torch_to_nnef/op/: __init__.py  base.py  custom_extractors.py  fragments.py  helper.py  old_nnef_hook_sys_quant.py  primitive.py  quantized.py
torch_to_nnef/op/aten/: __init__.py  activation.py  attn.py  axes_change.py  complex.py  concat.py  expand.py  fft.py  math.py  matmul.py  norm.py  other.py  pad.py  pool.py  qops.py  reducer.py  selector.py  split.py  tensor_build.py  unary.py
torch_to_nnef/op/custom_extractors/: __init__.py  base.py  qtensor.py  rnn.py
torch_to_nnef/op/fragment/: __init__.py  addmm.nnef  atan2.nnef  baddbmm.nnef  dyn_slice.nnef  dyn_slice_begin.nnef  erf.nnef  expm1.nnef  fmod.nnef  gelu.nnef  gelu_fast_approx.nnef  glu.nnef  group_norm.nnef  gru.nnef  hard_tanh.nnef  hardswish.nnef  layer_norm.nnef  layer_norm_with_affine.nnef  legacy_scaled_dot_product_attention.tmpl.nnef  log1p.nnef  log_softmax.nnef  lstm.nnef  lstm_opti_latency.nnef  lstm_with_projection.nnef  norm_neg_inf.nnef  norm_p1.nnef  norm_p2.nnef  norm_pinf.nnef  norm_pn.nnef  pick_index_in_axis.nnef  relu6.nnef  remainder.nnef  rnn.nnef  rnn_bidi_pack.nnef  rnn_relu.nnef  rnn_tanh.nnef  rsub.nnef  scaled_dot_product_attention.nnef  scaled_dot_product_attention.tmpl.nnef  scaled_dot_product_attention_3d.nnef  (+13 more)
torch_to_nnef/op/nn/: __init__.py  activation.py  cnn.py
torch_to_nnef/op/primitive/: __init__.py  activation.py  attn.py  axes_change.py  base.py  complex.py  concat.py  div.py  expand.py  fft.py  math.py  matmul.py  norm.py  other.py  pad.py  pool.py  qops.py  reducer.py  selector.py  split.py  tensor_build.py  unary.py
torch_to_nnef/peft/: cli.py
torch_to_nnef/qtensor/: __init__.py  base.py  bitpack.py  gguf.py  mod_inject.py  qsep.py  qtract.py
torch_to_nnef/tensor/: __init__.py  named.py  offload.py  opaque.py  param.py  updater.py  utils.py
torch_to_nnef/torch_graph/: __init__.py  ir_data.py  ir_graph.py  ir_helpers.py  ir_module_tracer.py  ir_naming.py  ir_op.py  torch_const.py
v0.19/: index.html  nnef_lexer.py  objects.inv
v0.19/CHANGELOG/: index.html
v0.19/backstory/: index.html
v0.19/html/: demo_pose_estimation.html  llm_worker.js
v0.19/search/: search_index.json
v0.19/why_nnef/: index.html
v0.20/: 404.html
v0.20/CHANGELOG/: index.html
v0.20/examples/imageclass-wasm/: Cargo.toml  export_with_batchable.py
v0.20/examples/llm_wasm/: Cargo.toml  requirements.txt  rust-toolchain
v0.20/export_api/: index.html
v0.20/html/: 1klabels.html  imageclass_wasm.js  llm_wasm.js
v0.20/search/: search_index.json
(+103 files in other folders)
