[project]
name = "torch_to_nnef"
version = "0.19.0"
description = "Any PyTorch Model to NNEF file format."
authors = [{ name = "Julien Balian", email = "julien.balian@sonos.com" }]

# weird regression in 3.13 to address shortly
requires-python = ">=3.9.0,<4"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mako>=1.0.0,<2.0",
    "nnef>=1.0.7,<2",
    "nnef_tools>=1.0.7,<2",
    "numpy>=1.26.0,<3",
    "torch>=1.8.0,<3",
]

[project.optional-dependencies]
llm_tract = [
    "huggingface-hub>0.24",
    "protobuf>5.27",
    "sentencepiece>=0.2.0,<0.3",
    "tokenizers>=0.13.3",
    "transformers>=4.35.2,<5",
]
llm_tract_accelerate = ["accelerate"]
safetensors = ["safetensors"]
peft = ["peft"]
test = [
    "isort>=5.8.0,<6",
    "mypy~=1.13",
    "peft",
    "pytest-cov>=6.0.0,<7",
    "pytest>=8.3.3,<9",
    "ruff<1.0",
    "sentencepiece>=0.2.0,<0.3",
    "tokenizers>=0.13.3",
    "torchaudio>=2.6.0,<3",
    "torchvision>=0.21.0,<0.22",
    "transformers>=4.35.2,<5",
    "librosa",
]
[project.urls]
Homepage = "https://github.com/sonos/torch-to-nnef"

[project.scripts]
t2n_export_llm_to_tract = "torch_to_nnef.llm_tract.cli:main"
t2n_export_peft_to_nnef = "torch_to_nnef.peft.cli:main"

[project.entry-points."pygments.lexers"]
nnef = "docs.nnef_lexer:NNEFLexer"

[dependency-groups]
dev = [
    "mkdocs<1.7,>=1.6",
    "mkdocstrings-python<1.12,>=1.11",
    "mkdocs-material<9.7,>=9.6",
    "mkdocs-api-autonav==0.3.0",
    "tox>=4.23.2,<5",
    "pre-commit>=2.12.0,<3",
    "virtualenv>=20.2.2,<21",
    "pip~=24.0",
    "twine>=3.3.0,<4",
    "toml>=0.10.2,<0.11",
    "bump2version>=1.0.1,<2",
    "ipdb>=0.13.9,<0.14",
    "rich>=13.7.1,<14",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.hatch.build.targets.sdist]
include = ["torch_to_nnef", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
include = ["torch_to_nnef", "CHANGELOG.md"]

[build-system]
requires = ["hatchling", "setuptools>42"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = 'py39'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
profile = "black"
line_length = 80
skip = [".gitignore", ".dockerignore"]

[tool.pytest]
addopts = "--strict-markers -p no:warnings -s"

[tool.pytest.ini_options]
markers = [
    "ci_skip: marks tests as slow (deselect with '-m \"not ci_skip\"')",
    "serial",
]

[tool.pylint.master]
extension-pkg-whitelist = ["torch", "numpy"]

[tool.pylint.typecheck]
ignored-modules = ["torch", "numpy"]
ignored-classes = ["torch", "numpy"]
generated-members = ["torch.*"]

[tool.pylint.format]
max-module-lines = 2000

[tool.pylint."MESSAGE CONTROL"]
disable = [
    "deprecated-module",
    "invalid-name",
    "len-as-condition",
    "line-too-long",
    "locally-disabled",
    "logging-fstring-interpolation",
    "not-callable",
    "protected-access",
    "too-many-positional-arguments",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unused-argument",
    "unused-wildcard-import",
    "wrong-import-position",
    "import-error",                  # prospector have trouble with nnef, nnef_tools
]

[tool.pylint.DESIGN]
max-attributes = 15

[tool.mypy]
python_version = "3.9"


[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true
