[package]
name = "llm_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
causal_llm = { git = "https://github.com/sonos/tract", rev = "711f267" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
tract-nnef = { git = "https://github.com/sonos/tract", rev = "711f267" }
tract-transformers = { git = "https://github.com/sonos/tract", rev = "711f267" }
tokenizers = { version = "0.21", default-features = false, features = [
    "unstable_wasm",
] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4.5" }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
