[package]
name = "yolo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.25.6"
imageproc = "0.25.0"
tract-nnef = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
base64 = "0.22.1"
anyhow = "1.0"
lazy_static = "1.5.0"
