[package]
name = "llm_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
causal_llm = { git = "https://github.com/sonos/tract", branch = "feat/wasm-llm" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
tract-nnef = { git = "https://github.com/sonos/tract", branch = "feat/wasm-llm" }
tract-transformers = { git = "https://github.com/sonos/tract", branch = "feat/wasm-llm" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
